Fixed gap between items on Coupons and Cherry Pick pages

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -18,18 +18,18 @@ page-home {
   (max-width: 736px) {
     img {max-width: 68%}
     p {font-size: 100%;}
-    .transButtons{
-      background: none; 
+    /*.transButtons{
+      background: none;
       padding: 10px 10px;
-      }
+    }*/
     }
 
     @media only screen and
       (max-width: 3000px) and (min-width: 737px) {
         img {max-width: 23%}
         p {font-size: 100%;}
-        .transButtons{
-          background: none; 
+      /*  .transButtons{
+          background: none;
           padding: 10px 10px;
-            }
+        }*/
         }
